chore: remove token-related debug logs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Example environment variables (NO secrets)
 DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DB
+
+# Used by scripts/revalue/cronRevalueAll.mjs (calls your admin API)
+ADMIN_API_TOKEN=YOUR_TOKEN_HERE
